@@ -1,3 +1,10 @@
+2011-03-31  Mark Wielaard  <mjw@redhat.com>
+
+	* dwarf2out.c (dwarf2out_finish): Don't add low_pc and/or
+	high_pc attribute if the CU has no associated code. Only output
+	DW_AT_entry_pc for CU if not generating strict dwarf and
+	dwarf_version < 4.
+
 2011-04-07  Uros Bizjak  <ubizjak@gmail.com>
 
 	* config/i386/sse.md: Update copyright year.
